# AdventOfCode2025

./: .gitignore  README.md
day1/: .gitignore  Cargo.toml  README.md
day1/src/: main.rs  solution.rs  tests.rs
day2/: Cargo.toml
day2/src/: main.rs  tests.rs
day2/src/solution/: mod.rs
day3/: .clang-format  .gitignore  day3.cpp  meson.build  tests.cpp
day3/inc/: solution.h
day3/src/: solution.cpp
day3/subprojects/: aoclibs
day4/: .gitignore  settings.gradle.kts
day4/app/: build.gradle.kts
day4/app/src/main/java/org/aocday4/: Main.java  Solution.java
day4/app/src/test/java/org/aocday4/: AocTest.java
day5/: main.py  setup.sh  solution.py  tests.py
day6/: Cargo.toml
day6/src/: main.rs  solution.rs  tests.rs
day7/: settings.gradle.kts
day7/app/: build.gradle.kts
day7/app/src/main/java/org/aocday7/: Main.java  Solution.java
day7/app/src/test/java/org/aocday7/: AocTest.java  QuantumTimelineTest.java  TachyonBeamMapTest.java
day8/: .clang-format  .gitignore  day8.cpp  meson.build  tests.cpp
day8/inc/: solution.h
day8/src/: solution.cpp
utils/cpp/aoclibs/: .gitignore  aoclibs.cpp  aoclibs.h  aoclibs_test.cpp  meson.build
utils/cpp/aoclibs/exports/: aoclibs.h
utils/cpp/aoclibs/src/: aoclibs.cpp
utils/rust/aoclibs/: Cargo.toml
utils/rust/aoclibs/src/: inputreader.rs  lib.rs
